--- a/assets/admin/css/style.css
+++ b/assets/admin/css/style.css
@@ -2,4 +2,5 @@
  * WordPress admin enhancements, specific to theme's admin modifications.
  *
  * @package     conj-lite
+ * @author      MyPreview (Github: @mypreview, @gookalani)
  */
