--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ Version: 			1.1.0
 License: 			GNU General Public License v3 or later
 License URI: 		http://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: 		conj-lite
-Tags: 				two-columns, three-columns, four-columns, left-sidebar, grid-layout, flexible-header, custom-background, custom-colors, custom-header, custom-menu, custom-logo, editor-style, featured-images, footer-widgets, full-width-template, sticky-post, theme-options, threaded-comments, translation-ready, rtl-language-support, blog, e-commerce, block-styles, wide-blocks
+Tags: 				two-columns, three-columns, four-columns, left-sidebar, right-sidebar, grid-layout, flexible-header, custom-background, custom-colors, custom-header, custom-menu, custom-logo, editor-style, featured-images, footer-widgets, full-width-template, sticky-post, theme-options, threaded-comments, translation-ready, rtl-language-support, blog, e-commerce, block-styles, wide-blocks
 
 This theme, like WordPress, is licensed under the GPL.
 The core CSS libraries can be found in /assets/css/vendor/
